# knowlyr-crew

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  README.zh-CN.md  pyproject.toml
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/create-employee/: SKILL.md
.claude/skills/doc-writer/: SKILL.md
.claude/skills/pr-creator/: SKILL.md
.claude/skills/product-manager/: SKILL.md
.claude/skills/refactor-guide/: SKILL.md
.claude/skills/test-engineer/: SKILL.md
.crew/: mcp_servers.yaml
.github/workflows/: auto-review.yml  deploy.yml  release.yml  test.yml
deploy/: deploy.sh  knowlyr-crew.service  nginx-crew.conf  setup.sh
docs/: PRODUCTION.md  TROUBLESHOOTING.md  config-migration.md  landing-en.md  landing-zh.md  memory-deduplication.md
hooks/: pre-commit
schemas/: discussion.schema.json  pipeline.schema.json
scripts/: MEMORY_MIGRATION.md  audit_employees.py  backfill_embeddings.py  batch_trajectory.sh  clean_trajectories.py  cleanup_memories.py  crew_eval.py  daily_eval.py  deploy.sh  eval_reminder.py  generate_hr_trajectories.py  health_check.sh  import_configs.py  memory_cleanup.py  migrate_add_tenant_id.py  migrate_mcp_credentials.py  migrate_memory_to_db.py  migrate_skills.py  migrate_slug_memories.py  run_daily_eval.sh  run_eval_testset.py  session_digest.py  split_soul.py  sync_api_tools.py  sync_employee_config.py  sync_employee_memories.py  sync_employee_templates.py  test_chat_model_compare.py  test_load_checklist.py  test_memory_store_db.py  test_migrated_skills.py  test_skill_triggers.py  test_skills_integration.py  upload_skills_via_api.py  verify_memory_sync.py
scripts/eval_testsets/: backend-engineer.json  ceo-assistant.json  code-reviewer.json  community-operator.json  data-engineer.json  devops-engineer.json  doc-writer.json  frontend-engineer.json  hr-manager.json  product-manager.json  test-engineer.json  ux-designer.json
scripts/skill_trigger_testcases/: 卫子昂.yaml  姜墨言.yaml  林锐.yaml  程薇.yaml  赵云帆.yaml
src/crew/: __init__.py  agent_bridge.py  auth.py  avatar.py  classification.py  cli.py  config_store.py  context_detector.py  cost.py  cron_archive_memories.py  cron_config.py  cron_evaluate.py  cron_extract_memories.py  cron_scheduler.py  database.py  delivery.py  discovery.py  discussion.py  discussion_ingest.py  embedding.py  engine.py  evaluation.py  event_collector.py  exceptions.py  executor.py  feishu.py  feishu_memory.py  id_client.py  lanes.py  log.py  mcp_server.py  meeting_log.py  memory.py  memory_archive.py  memory_cache.py  memory_consolidate.py  memory_drafts.py  memory_feedback.py  memory_index.py  memory_performance.py  (+50 more)
src/crew/builtin_templates/: advanced-employee.md  meta-prompt.md
src/crew/cli/: __init__.py  discuss.py  employee.py  memory.py  ops.py  pipeline.py  route.py  server.py
src/crew/employees/: __init__.py  code-reviewer.md  doc-writer.md  employee-generator.md  pr-creator.md  product-manager.md  refactor-guide.md  test-engineer.md
src/crew/employees/discussions/: architecture-review.yaml  feature-design.yaml  full-review.yaml
src/crew/employees/pipelines/: full-review.yaml  review-test-pr.yaml
src/crew/mcp_gateway/: __init__.py  audit.py  config.py  credentials.py  manager.py  registry.py
src/crew/webhook_handlers/: __init__.py  _admin.py  _common.py  _config.py  _employee.py  _execution.py  _memory.py  _tenant.py
src/crew/webhook_tools/: __init__.py  _constants.py  core.py  data_query.py  engineering.py  external.py  feishu.py  github.py  orchestration.py
tests/: conftest.py  test_agent_bridge.py  test_async_delegation.py  test_auth.py  test_auth_matrix.py  test_avatar.py  test_capability_enhancements.py  test_chat.py  test_circuit_breaker.py  test_cli.py  test_cli_agents_freeze.py  test_cli_skill.py  test_context_detector.py  test_cost.py  test_cron.py  test_cron_config.py  test_daily_eval.py  test_dedup.py  test_delegation.py  test_delivery.py  test_discovery.py  test_discussion.py  test_embedding.py  test_employee_copy.py  test_employees_db.py  test_engine.py  test_enhance.py  test_evaluation.py  test_event_collector.py  test_exceptions.py  test_executor.py  test_feishu.py  test_feishu_memory.py  test_file_lock.py  test_heartbeat.py  test_id_client.py  test_knowledge_dashboard.py  test_kv_api.py  test_lanes.py  test_log.py  (+75 more)
tests/fixtures/: invalid_employee.md  valid_employee.md
tests/fixtures/.crew/memory/: embeddings.db
tests/fixtures/employee_with_extras/: employee.yaml  prompt.md  soul.md
tests/fixtures/employees/: pr-creator.md  product-manager.md
tests/fixtures/valid_employee_dir/: employee.yaml  prompt.md
(+2 files in other folders)
